syntax = "proto3";

package golem.worker;

import "golem/common/account_id.proto";
import "golem/common/string_filter_comparator.proto";
import "golem/common/filter_comparator.proto";
import "golem/worker/worker_id.proto";
import "golem/worker/worker_status.proto";

message WorkerFilter {
  oneof filter {
    WorkerNameFilter name = 1;
    WorkerVersionFilter version = 2;
    WorkerStatusFilter status = 3;
    WorkerEnvFilter env = 4;
    WorkerAndFilter and = 5;
    WorkerOrFilter or = 6;
    WorkerNotFilter not = 7;
  }
}

message WorkerNotFilter {
  WorkerFilter filter = 1;
}

message WorkerAndFilter {
  repeated WorkerFilter filters = 1;
}

message WorkerOrFilter {
  repeated WorkerFilter filters = 1;
}

message WorkerNameFilter {
  golem.common.StringFilterComparator comparator = 1;
  string value = 2;
}

message WorkerVersionFilter {
  golem.common.FilterComparator comparator = 1;
  int32 value = 2;
}

message WorkerStatusFilter {
  WorkerStatus value = 1;
}

message WorkerEnvFilter {
  string name = 1;
  golem.common.StringFilterComparator comparator = 2;
  string value = 3;
}